Changelog:

8.14.13
PlayerBack graphical updates
PlayerTricky and PlayerBack keyboard controls.
PlayerBack and PlayerTwoTouch getting kicked out of lock no longer has Ball call powerKeyReleased()

8.13.13
Slow-mo versions of all sounds, minor sound tweaks besides
PlayerTricky active-camouflage ability added

8.12.13
Fixed Back and TwoTouch "ball kicked out of lock" behaviour.
Added white bars around field so power kick flashes and other gameplay elements aren't drawn outside of the field

8.9.13
All sounds are now ogg files. Sounds folder 1/7th the size.

7.26.13
PlayerTwin keyboard controls

7.25.13
PlayerDash updates:
	Keyboard controls
	Two buttons have been merged into one button
	Angle code smartened

7.24.13
Keyboard controls revamped for Neo, Neutron, Enforcer, Tricky , and TwoTouch

7.23.13
PlayerNeutron graphics and sound effects
PlayerNeutron can now swing the ball into a goal

7.22.13
PlayerNeutron Prototype completed
Ball can have negative velmag targets, will flip the velocity vector when negative velocities are reached
Ball will not have curve if the velmag target is negative

7.18.13
More PlayerNeutron functionality implemented (Experimental)

7.17.13
Kicking Changes in GameplayState:
	Velocity of kick is a base value plus the velocity of the player in the direction of the kick, times the kick strength multiplier
	Hopefully this makes it so direct kicks are faster and glancing kicks are slower.
	TODO: Test with many kick strengths
Some PlayerNeutron functionality implemented (Experimental)
	TODO: Test Gravitational Push with TwoTouch and Back

7.17.13
Minor optimizations:
	Cast delta to float at top of update, reducing number of delta casts in individual methods

7.15.13
PlayerBack graphics and sound effects

7.11.13
Added angle control code changes to PlayerBack, with slight modifications
	TODO: Test between "tangential release" behaviour or "release in direction of vel" behaviour

7.9.13
PlayerBack bugfixes