@@ -1,5 +1,5 @@
 [DISPLAY]
-SCREENWIDTH = 800
+SCREENWIDTH = 1200
 SCREENHEIGHT = 600
 FULLSCREEN = false
 
