@@ -4,6 +4,7 @@ Changelog:
 PlayerBack graphical updates
 PlayerTricky and PlayerBack keyboard controls.
 PlayerBack and PlayerTwoTouch getting kicked out of lock no longer has Ball call powerKeyReleased()
+PlayerTwin assist mechanic removed, replaced by sychronization mechanic
 
 8.13.13
 Slow-mo versions of all sounds, minor sound tweaks besides
